# financial-fraud-detection-system

./: .gitignore  DEVELOPMENT.md  ISSUE_FEATURE_ENGINEERING.md  ISSUE_MODEL_BUILDING.md  ISSUE_SHAP_INTERPRETABILITY.md  ISSUE_TEMPLATE_SIMPLE.md  MODEL_IMPLEMENTATION_GUIDE.md  README.md  architecture_diagram.md  feature_engineering_issue.md  issue_content.md  main.py  pyproject.toml  requirements.txt  shap_model_interpretation_issue.md  train_models.py
src/: __init__.py
src/api/: __init__.py  shap_endpoints.py
src/features/: __init__.py  feature_engineering.py  feature_generator.py
src/models/: __init__.py  model_evaluator.py  model_predictor.py  model_trainer.py  shap_interpreter.py
src/monitoring/: __init__.py
